--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Listings</title>
-</head>
+<% layout("/layouts/boilerplate") %>
 <body>
     <h1>All Listings</h1>
     <hr><br>
-    <form method = "GET" action = "/listings/new">
+    <!-- <form method = "GET" action = "/listings/new">
         <button type = "submit">Create New Listing</button>
     </form>
-    <br><hr>
+    <br><hr> -->
     <ul>
         <% for (const listing of allListings){ %>
             <li><a href = "/listings/<%=listing._id%>"><%=listing.title%></a></li>
         <% } %>
     </ul>
 </body>
-</html>
