--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,3 +37,30 @@
 .f-info-socials i:hover{
     font-size: 120%;
 }
+
+/* card styling */
+.card{
+    border: none !important;
+    margin-bottom: 2rem !important;
+}
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+    height: 350px !important;
+}
+.card-body{
+    padding: 0 !important;
+    padding-left: 1rem !important;
+}
+.listing-link{
+    text-decoration: none;
+}
+/* card overlay */
+.card-img-overlay{
+    opacity: 0;
+}
+.card-img-overlay:hover{
+    opacity: 0.2;
+    background-color: aliceblue;
+}
