--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,9 +6,22 @@
         <button type = "submit">Create New Listing</button>
     </form>
     <br><hr> -->
-    <ul>
-        <% for (const listing of allListings){ %>
-            <li><a href = "/listings/<%=listing._id%>"><%=listing.title%></a></li>
-        <% } %>
-    </ul>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <% for (const listing of allListings){ %>
+        <a href="/listings/<%=listing._id%>" class="listing-link">
+        <div class="card">
+            <img 
+                class="card-img-top"
+                src="<%=listing.image.url %>" 
+                alt="Hotel"
+            ><div class="card-img-overlay"></div>
+            <div class="card-body">
+                <p class="card-text">
+                    <strong><%=listing.title %></strong><br>
+                    &#8377;<%=listing.price.toLocaleString("en-IN") %> / night
+                <p>
+            </div>
+        </div></a>
+    <% } %>
+    </div>
 </body>
