--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,19 +1,39 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <h1>New Listing</h1>
+    <div class="row">
+        <div class="col-8 offset-2">
     <form method = "POST" action = "/listings">
-        <input name = "listing[title]" placeholder = "Title" type = "text">
-        <br><hr><br>
-        <textarea name = "listing[description]" placeholder = "Description" rows = 10 cols = 10></textarea>
-        <br><hr><br>
-        <input name = "listing[image][url]" placeholder = "Enter the Image URL" type = "text">
-        <br><hr><br>
-        <input name = "listing[price]" placeholder = "Enter the Price" type = "Number">
-        <br><hr><br>
-        <input name = "listing[location]" placeholder = "Enter the Location" type = "text">
-        <br><hr><br>
-        <input name = "listing[country]" placeholder = "Enter the Country" type = "text">
-        <br><hr><br>
-        <button type = "submit">ADD</button>
+        <div>
+            <label for="title">Title:   </label>
+            <input name = "listing[title]" placeholder = "Title" type = "text" class="form-control">
+        </div><br>
+        
+        <div>
+            <label for="description" class="form-label">Description: </label>
+            <textarea name = "listing[description]" placeholder = "Description" rows = 5 cols = 5 class="form-control"></textarea>
+        </div><br>
+
+        <div>
+            <label for="url" class="form-label">Image URL: </label>
+            <input name = "listing[image][url]" placeholder = "Enter the Image URL" type = "text" class="form-control">
+        </div><br>
+
+        <div>
+            <label for="price" class="form-label">Price: </label>
+            <input name = "listing[price]" placeholder = "Enter the Price" type = "Number" class="form-control">
+        </div><br>
+
+        <div>
+            <label for="location" class="form-label">Location: </label>
+            <input name = "listing[location]" placeholder = "Enter the Location" type = "text" class="form-control">
+        </div><br>
+
+        <div>
+            <label for="country" class="form-label">Country: </label>
+            <input name = "listing[country]" placeholder = "Enter the Country" type = "text" class="form-control">
+        </div><br>
+
+        <button type = "submit" class="btn btn-dark">ADD</button><br><br>
     </form>
+    </div></div>
 </body>
