--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,35 +2,47 @@
 <body> 
     <div class="row">
         <div class="col-8">
-        <form method = "POST" action = "/listings/<%=listing._id%>?_method=PUT">
+        <form method = "POST" action = "/listings/<%=listing._id%>?_method=PUT" novalidate class="needs-validation">
         <div>
             <label for="title" class="form-label">Title:</label>
-            <input name = "listing[title]" value = "<%=listing.title%>" type = "text" class="form-control">
+            <input name = "listing[title]" value = "<%=listing.title%>" type = "text" class="form-control" required>
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please provide a Valid Title</div>
         </div><br>
 
         <div>
             <label for="description" class="form-label">Description:</label>
-            <textarea name = "listing[description]" placeholder = "Description" rows = 5 cols = 5 class="form-control"><%=listing.description%></textarea>
+            <textarea name = "listing[description]" placeholder = "Description" rows = 5 cols = 5 class="form-control" required><%=listing.description%></textarea>
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please provide a Short Description</div>
         </div><br>
 
         <div>
             <label for="imageURL" class="form-label">Image URL:</label>
-            <input name = "listing[image][url]" class="form-control" value = "<%=listing.image.url%>" type = "text">
+            <input name = "listing[image][url]" class="form-control" value = "<%=listing.image.url%>" type = "text" required>
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Enter a Valid URL</div>
         </div><br>
 
         <div>
             <label for="price" class="form-label">Price:</label>
-            <input name = "listing[price]" value = "<%=listing.price%>" type = "Number" class="form-control">
+            <input name = "listing[price]" value = "<%=listing.price%>" type = "Number" class="form-control" required>
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Enter a valid Price</div>
         </div><br>
 
         <div>
             <label for="location" class="form-label">Location:</label>
-            <input name = "listing[location]" value = "<%=listing.location%>" type = "text" class="form-control">
+            <input name = "listing[location]" value = "<%=listing.location%>" type = "text" class="form-control" required>
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Enter a Correct Location</div>
         </div><br>
 
         <div>
             <label for="country" class="form-label">Country:</label>
-            <input name = "listing[country]" value = "<%=listing.country%>" type = "text" class="form-control">
+            <input name = "listing[country]" value = "<%=listing.country%>" type = "text" class="form-control" required>
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Enter a Valid Country</div>
         </div><br>
 
         <button type = "submit" class="btn btn-dark">Edit</button><br><br>
