--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,9 +2,9 @@
 <body>
     <div class="row">
         <div class="col-9">
-            <div class="card offset-3">
+            <div class="card offset-3 listing-card">
                 <img class="card-img-top" src="<%=listing.image.url%>" alt="Image">
-                <div class="card-body title-description">
+                <div class="card-body listing-card-body title-description">
                     <h5 class="card-title"><%=listing.title%></h5>
                     <p class="card-text"><%=listing.description%><p>
                 </div>
@@ -21,9 +21,11 @@
                 </div>
             </div>
         </div>
-        <hr>
+    </div>    
         <!-- reviews -->
-        <div class="col-8 offset-3 mt-3 mb-3">
+    <div class="row offset-2">
+        <hr>
+        <div class="col-5 mt-3 mb-3">
             <h4>Leave a Review</h4>
             <form action="/listings/<%=listing.id%>/reviews" method="post">
                 <div class="mb-3 mt-3">
@@ -37,5 +39,30 @@
                 <button class="btn btn-outline-dark">Submit</button>
             </form>
         </div>
+    </div>
+        <!-- Show Reviews -->
+    <div class="row justify-content-center text-center">
+        <hr>
+        <!-- <h3 class="text-muted">Take a Look at Reviews</h3> -->
+        <% for(review of listing.reviews) {%>
+       <div class="card col-12 col-lg-4 col-xl-5 m-2 px-0 rounded">
+            <div class="card-header">John Doe</div>
+            <div class="card-body">
+                <h5 class="card-title"> 
+                    <% for(let i = 0;i < review.rating;i++){ %>
+                        <span class="review-star-filled">&#9733;</span>
+                    <% } %>
+                    <% for (let i = review.rating; i < 5; i++) { %>
+                        <span class="star">&#9734;</span>
+                    <% } %>
+                </h5>
+                <p class = "card-text"><%=review.comment %></p>
+                <form method="post" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+                    <button class="btn btn-danger mb-3" type="submit">DELETE</button>
+                </form>
+            </div>
+            <div class="card-footer text-muted"><%= review.createdAt %></div>
+        </div>
+        <% } %>
     </div>
 </body>
