Phase 2: Restructured app.js

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -34,7 +34,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="reviewDescripton" class="form-label">Descripton: </label>
-                    <textarea class="form-control" id="reviewDescripton" rows="5" cols="5" name="review[comment]" ></textarea>
+                    <textarea class="form-control" id="reviewDescripton" rows="5" cols="5" placeholder="Add a description" name="review[comment]" ></textarea>
                 </div>
                 <button class="btn btn-outline-dark">Submit</button>
             </form>
