--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,10 @@
     border: none !important;
     margin-bottom: 2rem !important;
 }
+.index-card{
+    border: none !important;
+    margin-bottom: 2rem !important;
+}
 .card-img-top{
     border-radius: 1rem !important;
     width: 100% !important;
