--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -9,7 +9,7 @@
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
     <% for (const listing of allListings){ %>
         <a href="/listings/<%=listing._id%>" class="listing-link">
-        <div class="card">
+        <div class="card index-card">
             <img 
                 class="card-img-top"
                 src="<%=listing.image.url %>" 
