--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -8,41 +8,47 @@
             <input name = "listing[title]" placeholder = "Title" type = "text" class="form-control" required>
             <div class="valid-feedback">Looks good!</div>
             <div class="invalid-feedback">Please provide a Valid Title</div>
-        </div><br>
-        
+        </div>
+        <br>
+
         <div>
             <label for="description" class="form-label">Description: </label>
             <textarea name = "listing[description]" placeholder = "Description" rows = 5 cols = 5 class="form-control" required></textarea>
             <div class="valid-feedback">Looks good!</div>
             <div class="invalid-feedback">Please provide a Short Description</div>
-        </div><br>
+        </div>
+        <br>
 
         <div>
             <label for="url" class="form-label">Image URL: </label>
             <input name = "listing[image][url]" placeholder = "Enter the Image URL" type = "text" class="form-control">
             <div class="valid-feedback">Looks good!</div>
-        </div><br>
+        </div>
+        <br>
 
         <div>
             <label for="price" class="form-label">Price: </label>
             <input name = "listing[price]" placeholder = "Enter the Price" type = "Number" class="form-control" required>
             <div class="valid-feedback">Looks good!</div>
             <div class="invalid-feedback">Enter a valid Price</div>
-        </div><br>
+        </div>
+        <br>
 
         <div>
             <label for="location" class="form-label">Location: </label>
             <input name = "listing[location]" placeholder = "Enter the Location" type = "text" class="form-control" required>
             <div class="valid-feedback">Looks good!</div>
             <div class="invalid-feedback">Enter a Correct Location</div>
-        </div><br>
+        </div>
+        <br>
 
         <div>
             <label for="country" class="form-label">Country: </label>
             <input name = "listing[country]" placeholder = "Enter the Country" type = "text" class="form-control" required>
             <div class="valid-feedback">Looks good!</div>
             <div class="invalid-feedback">Enter a Valid Country</div>
-        </div><br>
+        </div>
+        <br>
 
         <button type = "submit" class="btn btn-dark">ADD</button><br><br>
     </form>
