--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -11,5 +11,14 @@
         <a class="nav-link" href="/listings/new">Add New Listing</a>
       </div>
     </div>
+    <div class="navbar-nav">
+      <% if (currentUser) { %>
+    <a class="nav-link" href="/logout">Logout</a>
+      <% } else { %>
+    <a class="nav-link" href="/signup">Signup</a>
+    <a class="nav-link" href="/login">Login</a>
+  <% } %>
+</div>
+
   </div>
 </nav>
