--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -35,7 +35,18 @@
                 <form action="/listings/<%=listing.id%>/reviews" method="post">
                     <div class="mb-3 mt-3">
                         <label for="rating" class="form-label">Rating: </label>
-                        <input type="range" min="1" max="5" class="form-range" name="review[rating]" id="rating">
+                        <fieldset class="starability-slot">
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
                     </div>
                     <div class="mb-3">
                         <label for="reviewDescripton" class="form-label">Descripton: </label>
