--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+body{
+     font-family: "Noto Serif", serif !important;
+}
+
 .container{
     min-height: 100vh;
 }
@@ -6,6 +10,7 @@
     height:80px;
     margin-bottom: 25px !important;
 }
+
 /* Footer */
 .f-info{
     background-color: azure;
