--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -20,8 +20,8 @@
         <br>
 
         <div>
-            <label for="url" class="form-label">Image URL: </label>
-            <input name = "listing[image]" placeholder = "Enter the Image URL" type = "file" class="form-control">
+            <label for="url" class="form-label">Image: </label>
+            <input name = "listing[image]" placeholder = "Upload A Image" type = "file" class="form-control">
             <div class="valid-feedback">Looks good!</div>
         </div>
         <br>
