--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -21,7 +21,7 @@
 
         <div>
             <label for="url" class="form-label">Image: </label>
-            <input name = "listing[image]" placeholder = "Upload A Image" type = "file" class="form-control">
+            <input name = "listing[image]" type = "file" class="form-control">
             <div class="valid-feedback">Looks good!</div>
         </div>
         <br>
