--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,24 +1,25 @@
 <nav class="navbar navbar-expand-md bg-body-light sticky-top border-bottom">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><img src="/wanderHomeLogo.png" height="70px" width="160px"></a>
+    <a class="navbar-brand" href="/listings"><img src="/wanderHomeLogo.png" height="70px" width="160px"></a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
     <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/listings">All listing</a>
-        <a class="nav-link" href="/listings/new">Add New Listing</a>
+        <a class="nav-link" href="/listings">Explore</a>
+        <a class="nav-link" href="/listings/new">Add your Home</a>
       </div>
     </div>
+
     <div class="navbar-nav">
       <% if (currentUser) { %>
-    <a class="nav-link" href="/logout">Logout</a>
+        <a class="nav-link" href="/logout">Logout</a>
       <% } else { %>
-    <a class="nav-link" href="/signup">Signup</a>
-    <a class="nav-link" href="/login">Login</a>
-  <% } %>
-</div>
-
+        <a class="nav-link" href="/signup">Signup</a>
+        <a class="nav-link" href="/login">Login</a>
+      <% } %>
+    </div>
   </div>
 </nav>
